# kaiten-cli

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  deny.toml
.github/workflows/: ci.yml  codeql.yml  publish.yml  release.yml  security.yml
crates/kaiten/: Cargo.toml
crates/kaiten-client/: Cargo.toml
crates/kaiten-client/src/: client.rs  error.rs  lib.rs  models.rs
crates/kaiten-client/src/api/: boards.rs  cards.rs  checklists.rs  comments.rs  files.rs  links.rs  members.rs  mod.rs  properties.rs  spaces.rs  tags.rs  time_logs.rs  users.rs
crates/kaiten-client/tests/: boards_test.rs  cards_test.rs  checklists_test.rs  client_test.rs  comments_test.rs  files_test.rs  members_test.rs  properties_test.rs  spaces_test.rs  tags_test.rs  users_test.rs
crates/kaiten-client/tests/fixtures/: board_get.json  boards_list.json  card_create.json  card_get_full.json  card_members_add.json  card_tag_add.json  card_types.json  card_update.json  cards_list.json  checklist_add.json  checklist_item_add.json  checklist_item_check.json  comment_add.json  comments_list.json  spaces_list.json  tags_list.json  user_current.json  users_list.json
crates/kaiten/src/: cli.rs  config.rs  error.rs  main.rs  output.rs
crates/kaiten/src/commands/: api.rs  auth.rs  board.rs  card.rs  card_type.rs  completion.rs  mod.rs  property.rs  space.rs  tag.rs
crates/kaiten/src/mcp/: mod.rs  projections.rs
crates/kaiten/tests/: api_test.rs  auth_test.rs  card_comment_test.rs  card_list_test.rs  card_member_test.rs  card_mutate_test.rs  card_type_test.rs  card_view_test.rs  checklist_test.rs  cli_skeleton_test.rs  completion_test.rs  mcp_stdio_test.rs  space_board_test.rs  tag_test.rs
crates/kaiten/tests/fixtures/: api_card_created.json  api_user_current.json  board_get.json  boards_list.json  card_archive.json  card_create.json  card_get_full.json  card_get_no_properties.json  card_types_list.json  card_update.json  card_with_checklists.json  card_with_tags.json  cards_list.json  checklist_created.json  checklist_item_checked.json  checklist_item_created.json  comment_created.json  comments_list.json  comments_list_two.json  mcp_card_create.json  mcp_card_full.json  mcp_spaces.json  mcp_user_current.json  member_added.json  member_users.json  spaces_list.json  tag_added.json  tags_list.json  users_current.json
crates/kaiten/tests/snapshots/: card_list_test__card_list.snap  card_view_test__card_view.snap  space_board_test__board_view.snap  space_board_test__space_list.snap
docs/superpowers/plans/: 2026-07-09-kaiten-cli-mcp.md
docs/superpowers/specs/: 2026-07-09-kaiten-cli-mcp-design.md
