[workspace]
resolver = "2"
members = ["crates/kaiten-client", "crates/kaiten"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dsociative/kaiten-cli"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# `KaitenClient::spaces()`/`.boards()`/etc. return lightweight facade structs
# (`Spaces`, `Boards`, ...); calling them for their side-effect-free field access
# and discarding the result is harmless, so `#[must_use]` on all 8 adds no value.
must_use_candidate = "allow"
# Errors are thiserror enums with self-explanatory variant names; per-function
# "# Errors" doc sections would be pure repetition, not information.
missing_errors_doc = "allow"
# Doc comments frequently quote REST paths like `GET /cards/{card_id}` and example
# URLs; the lint's auto-backtick suggestion for the former mis-splits on the `{}`
# placeholders (e.g. "/`boards/{board_id`}"), so it's actively wrong here, not just noisy.
doc_markdown = "allow"

[workspace.dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"
thiserror = "2"
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
comfy-table = "7"
toml = "0.8"
dirs = "6"
rpassword = "7"
rmcp = { version = "2", features = ["server", "macros", "transport-io"] }
schemars = "1"
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["filters"] }
tempfile = "3"
