[package]
name = "kaiten-client"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
wiremock = { workspace = true }
