[package]
name = "kaiten-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Typed async client for the Kaiten project tracker API"
keywords = ["kaiten", "kanban", "api-client"]
categories = ["api-bindings"]

[lints]
workspace = true

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time", "fs"] }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
wiremock = { workspace = true }
