[package]
name = "kaiten"
version.workspace = true
edition.workspace = true

[[bin]]
name = "kaiten"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
kaiten-client = { path = "../kaiten-client" }
clap = { workspace = true }
clap_complete = { workspace = true }
comfy-table = { workspace = true }
dirs = { workspace = true }
# reqwest::Method is constructed by the `api` command (Task 19)
reqwest = { workspace = true }
rmcp = { workspace = true }
rpassword = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
insta = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }
