[package]
name = "kaiten-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI and MCP server for the Kaiten project tracker"
keywords = ["kaiten", "kanban", "cli", "mcp"]
categories = ["command-line-utilities"]
readme = "../../README.md"

[[bin]]
name = "kaiten"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
kaiten-client = { path = "../kaiten-client", version = "0.2.0" }
clap = { workspace = true }
clap_complete = { workspace = true }
comfy-table = { workspace = true }
dirs = { workspace = true }
# reqwest::Method is constructed by the `api` command (Task 19)
reqwest = { workspace = true }
rmcp = { workspace = true }
rpassword = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
insta = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }
